--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
                   <h1 id="colorlib-logo"><a href="https://devgfbpl.github.io">Devendra Patani</a></h1>
 
-                  <p><strong>Six Sigma Master Black Belt and Master in Data Science</strong></p>
+                  <p><strong>Six Sigma Master Black Belt | Master in Data Science</strong></p>
 
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
