--- a/index.html
+++ b/index.html
@@ -929,6 +929,7 @@
                               <hr>
                               <p>I would like to thank you for visiting my page and your attention. On the off chance that you might want to connect with me,or to simply say hello, don't hesitate to send me an email at <strong><a href = "mailto: devgfbpl@gmail.com">devgfbpl@gmail.com</a></strong></p>
                               <p>Visit my articles <strong><a href="https://www.linkedin.com/in/devendra-patani/detail/recent-activity/posts//">DevendraPatani articles </a></strong></p>
+                              <p>Visit my projects <strong><a href="https://github.com/devgfbpl/ML_Project//">Machine Learning Projects</a></strong></p>
                            </div>
                         </div>
                      </div>
