--- a/index.html
+++ b/index.html
@@ -107,10 +107,12 @@
 
                                     <h2>About Me</h2>
                                     <hr>
-                                    <p align="justify">A dynamic leader, strategic thinker and transformation catalyst with over 19 years of diversified experience in delivering sustainable business performance improvement, conceptualizing and implementing Center of Excellence (CoE) strategies, Business analytics and transforming customer experience in Service & Manufacturing industries.
-                                    Proficient in designing & deploying Lean Six Sigma transformation programme, Trained more than 500 Lean Six Sigma Green Belts & Black Belts and successfully coached hundreds of breakthrough improvement projects.
-                                    Wide exposure of working at Fortune 500 companies in diversified sectors like Financial Services, Shipping, Renewable Energy, Food & Beverages, Consulting (Telecom, Engineering, Pharmaceutical & Chemical) and Manufacturing.
-                                    Expertise in the field of Process Excellence, Business Transformation, Change Management, Service Excellence, Strategy deployment, Stakeholder Management and Data Science.</p>
+                                    <p align="justify">
+                                        A dynamic leader, strategic thinker and transformation catalyst with over 19 years of diversified experience in delivering sustainable business performance improvement, conceptualizing and implementing Center of Excellence (CoE) strategies, Business analytics and transforming customer experience in Service & Manufacturing industries.
+                                        Proficient in designing & deploying Lean Six Sigma transformation programme, trained more than 500 Lean Six Sigma Green Belts & Black Belts and successfully mentored hundreds of breakthrough improvement projects.
+                                        Wide exposure to working at Fortune 500 companies in diversified sectors like Financial Services, Logistic and Shipping, Renewable Energy, Food & Beverages, Consulting (Telecom, Engineering, Pharmaceutical & Chemical) and Manufacturing.
+                                        Expert in transforming strategic plans into tactical initiatives, Led several strategic and functional initiatives, collaborative work with local and global teams in achieving company’s short term and long term goals.
+                                    </p>
                                  </div>
                               </div>
                            </div>
