--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
 
                   <h1 id="colorlib-logo"><a href="https://devgfbpl.github.io">Devendra Patani</a></h1>
 
-                  <p><strong>Six Sigma Master Black Belt | Master in Data Science</strong></p>
+                  <p><strong>
+                      Six Sigma Master Black Belt |
+                      Data Scientist |
+                      Certified Machine Learning and Artificial Intelligence Practitioner |
+                  </strong></p>
 
                </div>
                <nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -108,10 +112,10 @@
                                     <h2>About Me</h2>
                                     <hr>
                                     <p align="justify">
-                                        A dynamic leader, strategic thinker and transformation catalyst with over 19 years of diversified experience in delivering sustainable business performance improvement, conceptualizing and implementing Center of Excellence (CoE) strategies, Business analytics and transforming customer experience in Service & Manufacturing industries.
-                                        Proficient in designing & deploying Lean Six Sigma transformation programme, trained more than 500 Lean Six Sigma Green Belts & Black Belts and successfully mentored hundreds of breakthrough improvement projects.
-                                        Wide exposure to working at Fortune 500 companies in diversified sectors like Financial Services, Logistic and Shipping, Renewable Energy, Food & Beverages, Consulting (Telecom, Engineering, Pharmaceutical & Chemical) and Manufacturing.
-                                        Expert in transforming strategic plans into tactical initiatives, Led several strategic and functional initiatives, collaborative work with local and global teams in achieving company’s short term and long term goals.
+                                        A dynamic leader, strategic thinker and transformation catalyst with over 19 years of diversified experience in delivering sustainable business performance improvement, conceptualising and implementing Center of Excellence (CoE) strategies, building successful Machine Learning algorithms and transforming customer experience in Service & Manufacturing industries.</li>
+                                        A certified Lean Six Sigma Master Black Belt professional, proficient in designing & deploying Lean Six Sigma transformation programme, trained & developed more than 700 Lean Six Sigma professionals and mentored hundreds of Green Belts & Black belts on breakthrough improvement projects with desired outcomes.</li>
+                                        A certified Machine learning and Artificial Intelligence practitioner with an ability to build, test and deploy ML and AI models to solve real-world business problems.</li>
+                                        Expert in transforming strategic plans into tactical initiatives, Led several functional initiatives, collaborative work with local and global teams in achieving company’s short term and long term goals.</li>
                                     </p>
                                  </div>
                               </div>
@@ -138,7 +142,7 @@
                                  <!-- <a href="android.html" target="_blank"> -->
                                     <div class="services color-4">
                                        <span class="icon2"><i class="fa fa-android"></i></span>
-                                       <h3>Lean<br> Six Sigma</h3>
+                                       <h3>Data<br> Scientist</h3>
                                     </div>
                                  </a>
                               </div>
@@ -146,7 +150,7 @@
                                   <a href="ml.html" target="_blank">
                                     <div class="services color-1">
                                        <span class="icon2"><i class="fa fa-user"></i></span>
-                                       <h3>Data<br> Science</h3>
+                                       <h3>Machine <br> Learning</h3>
                                     </div>
                                  </a>
                               </div>
@@ -357,7 +361,7 @@
                         </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Business Excellence</h3>
+                              <h3 style="font-weight: 500;">Business Transformation</h3>
                               <div class="progress">
                                  <div class="progress-bar color-5" role="progressbar" aria-valuenow="95"
                                     aria-valuemin="0" aria-valuemax="100" style="width:95%">
@@ -366,17 +370,7 @@
                               </div>
                            </div>
                         </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Stakeholder Management</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                    <span>90%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
+
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
                            <div class="progress-wrap">
                               <h3 style="font-weight: 500;">Machine Learning</h3>
@@ -384,6 +378,17 @@
                                  <div class="progress-bar color-6" role="progressbar" aria-valuenow="85"
                                     aria-valuemin="0" aria-valuemax="100" style="width:85%">
                                     <span>85%</span>
+                                 </div>
+                              </div>
+                           </div>
+                        </div>
+                        <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+                           <div class="progress-wrap">
+                              <h3 style="font-weight: 500;">Artificial Intelligence</h3>
+                              <div class="progress">
+                                 <div class="progress-bar color-9" role="progressbar" aria-valuenow="80"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                    <span>80%</span>
                                  </div>
                               </div>
                            </div>
@@ -399,39 +404,17 @@
                               </div>
                            </div>
                         </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Tableau</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-8" role="progressbar" aria-valuenow="85"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:85%">
-                                    <span>85%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
                            <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Minitab</h3>
+                              <h3 style="font-weight: 500;">Big Data</h3>
                               <div class="progress">
-                                 <div class="progress-bar color-9" role="progressbar" aria-valuenow="80"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                    <span>80%</span>
+                                 <div class="progress-bar color-3" role="progressbar" aria-valuenow="90"
+                                    aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                    <span>90%</span>
                                  </div>
                               </div>
                            </div>
-                        </div>
-                        <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
-                           <div class="progress-wrap">
-                              <h3 style="font-weight: 500;">Python</h3>
-                              <div class="progress">
-                                 <div class="progress-bar color-10" role="progressbar" aria-valuenow="75"
-                                    aria-valuemin="0" aria-valuemax="100" style="width:75%">
-                                    <span>75%</span>
-                                 </div>
-                              </div>
-                           </div>
-                        </div>
+
                      </div>
                   </div>
                </section>
@@ -824,53 +807,69 @@
                                     <div class="timeline-label">
 
                            <li>
-
-                                    <strong>Certified Advanced Machine Learning, Simplilearn,</strong><span> Mar.2020 </span>
+                           <strong><a href="https://www.coursera.org/account/accomplishments/certificate/PZZCQY7B6EEQ">Machine learning Professional, Standford University, July 2020</a></strong>
                            </li>
 
                            <li>
-
-                                    <strong>Certified Big Data Hadoop and Spark Developer, Simplilearn,</strong><span> Mar.2020 </span>
+                           <strong><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/XK75JFJKFJ83">Deep Learning Specialization, deeplearning ai, July 2020</a></strong>
                            </li>
 
                            <li>
-
-                                    <strong>Certified Data Science in Python, Simplilearn,</strong><span> Feb.2020 </span>
+                           <strong><a href="https://www.coursera.org/account/accomplishments/certificate/3D3488P29UX5">AWS Machine Learning, AWS, June 2020</a></strong>
                            </li>
 
                            <li>
-
-                                    <strong>Certified Tableau Desktop 10, Simplilearn,</strong><span> Dec. 2019 </span>
+                           <strong><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/MZU4R4T78Y92">IBM Applied AI Specialisation, IBM, June 2020</a></strong>
                            </li>
 
                            <li>
+                           <strong><a href="https://confirm.udacity.com/GJLHMNHW">Natural Language Processing, Udacity, June 2020</a></strong>
+                           </li>
 
-                                    <strong>Certified Data Science with R, Simplilearn,</strong><span> Nov.2019 </span>
+                           <li>
+                           <strong><a href="https://www.youracclaim.com/badges/5f34b90d-dc4d-4d32-a3a8-f44c89f02025/linked_in_profile">Tableau Data Scientist, Tableau, June 2020</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/BETJKX9LQSWM">IBM Data Science Specialization, IBM, May 2020</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://confirm.udacity.com/X6YFDANT">Machine Learning Engineer, Udacity, May 2020</a></strong>
+                           </li>
+
+                            <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/3+Data+Science+Master.pdf">Data Scientist Master Program, Simplilearn, Mar.2020</a></strong>
+                           </li>
+
+
+                            <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/6+Machine+Learning+Advanced+Certification.pdf">Advanced Machine Learning, Simplilearn, Mar.2020</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/8+Big+Data+Hadoop+and+Spark+Developer.pdf">Big Data Hadoop and Spark Developer, Simplilearn, Mar.2020</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/4+Data+Science+with+Python.pdf">Data Science with Python, Simplilearn, Feb.2020</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/7+Tableau+Certificate.pdf">Tableau Desktop 10, Simplilearn, Dec.2019</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/5+Data+Science+with+R.pdf">Data Science with R, Simplilearn, Nov.2019</a></strong>
+                           </li>
+
+                           <li>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/2+Six+Sigma+Master+Black+Belt+Certificate.pdf">Six Sigma Master Black Belt, Indian Statistical Institute, June.2018</a></strong>
                            </li>
 
 
                            <li>
-
-                                    <strong>Certified Six Sigma Master Black Belt, Indian Statistical Institute,</strong><span> June 2018 </span>
-                           </li>
-
-                           <li>
-                                    <strong>Certified Machine Learning Specialist, Anexas Europe, </strong></span>
-                              May 2018</span>
-                           </li>
-                           <li>
-                                    <strong>Certified PRINCE2 Agile Practitioner, APMG International,</strong><span>
-                              Jun.2015</span>
-                           </li>
-
-                           <li>
-                              <strong>Certified Six Sigma Black Belt, American Society of Quality, </strong><span>
-                              May.2013</span>
-                           </li>
-
-                           <li>
-                              <strong>Certified Lean Master, SSA Business Solutions, </strong></span>
-                              Feb.2011</span>
+                           <strong><a href="https://dev-01.s3.ap-south-1.amazonaws.com/Certificates/1+ASQ+Black+Belt+Certificate.pdf">Six Sigma Black Belt, American Society of Quality, May.2013</a></strong>
                            </li>
 
                      </div>
