--- a/pe.html
+++ b/pe.html
@@ -12,7 +12,7 @@
       <meta name="keywords" content="portfolio, Projects, Improvement projects, Root Cause analysis, Agile, Project Plan, PMO " />
       <meta name="author" content="Devendra Patani" />
 
-      <!--Social Media icons--> 
+      <!--Social Media icons-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
       <link rel="icon" type="image/png" href="logo.png">
@@ -37,12 +37,16 @@
    <body>
       <div id="colorlib-page">
          <div class="container-wrap">
-            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
+            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/Devendra.png);"></div>
                   <h1 id="colorlib-logo"><a href="https://devgfbpl.github.io">Devendra Patani</a></h1>
-                  <p><strong>Six Sigma Master Black Belt| Process Excellence</strong></p>
+                  <p><strong>
+                  Six Sigma Master Black Belt |
+                  Data Scientist |
+                  Certified Machine Learning and Artificial Intelligence Practitioner |
+               </strong></p>
                </div>
             </aside>
             <div id="colorlib-main">
@@ -71,7 +75,7 @@
 									<div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="heading1">
 									        <h4 class="panel-title">
-									            <a data-toggle="collapse" href="#collapse1" aria-expanded="true" aria-controls="collapse1">Reduction of TAT for Lead Generation to Loan Disbursement
+									            <a data-toggle="collapse" href="#collapse1" aria-expanded="true" aria-controls="collapse1">REDUCE LOAN DISBURSEMENT TAT
 									            </a>
 									        </h4>
 									    </div>
@@ -80,11 +84,12 @@
 									            <div class="row">
 		 												<ul>
                                                            <p align="center"><h5><strong> Mahindra and Mahindra Financial Services Limited, Oct. 2017 – May. 2018</strong></h5></p>
-
+                                                           <p align="justify"><h5>Problem statement:</h5> Loan disbursement TAT is high which is avg.11 days impacted on market share and leads customer dissatisfaction.</p>
+                                                           <p align="justify"><h5>Methodology:</h5></p>
                                                             <li>  Mapped current state and study AS-IS processes </li>
                                                             <li>  Formed Cross-functional project team</li>
                                                             <li>  Trained team on Lean methodology</li>
-										      				<li>  Created data collection plan </li>
+										      				            <li>  Created data collection plan </li>
                                                             <li>  Conducted Gemba</li>
                                                             <li>  Prepared Current state Value Stream Mapping</li>
                                                             <li>  Stratified data and calculated Process Cycle efficiency for current state</li>
@@ -95,7 +100,9 @@
                                                             <li>  Calculated improved process cycle efficiency</li>
                                                             <li>  Created robust monitoring mechanism</li>
                                                             <li>  Sustained improvements.</li>
-                                                            <p align="justify"><h5><strong>Project achievements: It reduced TAT of Lead Generation to Loan Disbursement from avg.11 days to 3 days.</strong></h5></p>
+                                                            <p align="justify"><h5>Project achievements:</h5> It reduced TAT of Lead Generation to Loan Disbursement from avg.11 days to 3 days.</p>
+
+
 										      			</ul>
 										      		</div>
 										      	</div>
@@ -105,22 +112,23 @@
                                     <div class="panel panel-default">
 									    <div class="panel-heading" role="tab" id="heading2">
 									        <h4 class="panel-title">
-									            <a class="collapsed" data-toggle="collapse" href="#collapse2" aria-expanded="false" aria-controls="collapse2">Improve market share of newly launched product XUV 300
+									            <a class="collapsed" data-toggle="collapse" href="#collapse2" aria-expanded="false" aria-controls="collapse2">IMPROVE LOAN DISBURSEMENT MARKET SHARE OF XUV 300
 									            </a>
 									        </h4>
 									    </div>
 									    <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
 									        <div class="panel-body">
 									            <p align="center"><h5><strong> Mahindra and Mahindra Financial Services Limited, May. 2019 – Dec. 2019</strong></h5></p>
-
+                                       <p align="justify"><h5>Problem statement:</h5> Loan disbursement TAT is high which is avg.11 days impacted on market share and leads customer dissatisfaction.</p>
+                                       <p align="justify"><h5>Methodology:</h5></p>
                                                             <li>  Mapped current state and study AS-IS processes </li>
                                                             <li>  Identified significant factors of impacting market share through advanced machine learning algorithms.</li>
                                                             <li>  Developed dealer wise cluster model through K-mean clustering </li>
                                                             <li>  Evaluated process inefficiencies through Exploratory data analysis (EDA).</li>
                                                             <li>  Performed competitive bench-marking analysis </li>
                                                             <li>  Designed improved processes and developed customized policies.</li>
-                                                            <p align="justify"><h5><strong>Project achievements: Improved market share of newly launched product from avg. 20% to 31%.</strong></h5></p>
-
+                                                            <p align="justify"><h5>Project achievements:</h5> Improved Loan disbursement market share of XUV300 from avg. 20% to 31%.</p>
+                                                            <p>Project URL <strong><a href="https://github.com/devgfbpl/ML_Project/tree/master/XUV_300//">XUV300 Improvement Project</a></strong></p>
 									        </div>
 									    </div>
 									</div>
