--- a/pm.html
+++ b/pm.html
@@ -12,7 +12,7 @@
       <meta name="keywords" content="portfolio, Projects, Improvement projects, Root Cause analysis, Agile, Project Plan, PMO " />
       <meta name="author" content="Devendra Patani" />
 
-      <!--Social Media icons--> 
+      <!--Social Media icons-->
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
       <link rel="icon" type="image/png" href="logo.png">
@@ -37,12 +37,16 @@
    <body>
       <div id="colorlib-page">
          <div class="container-wrap">
-            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a> 
+            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i></i></a>
             <aside id="colorlib-aside" role="complementary" class="border js-fullheight">
                <div class="text-center">
                   <div class="author-img" style="background-image: url(images/Devendra.png);"></div>
                   <h1 id="colorlib-logo"><a href="https://devgfbpl.github.io">Devendra Patani</a></h1>
-                  <p><strong>Six Sigma Master Black Belt| Project Management</strong></p>
+                  <p><strong>
+                  Six Sigma Master Black Belt |
+                  Data Scientist |
+                  Certified Machine Learning and Artificial Intelligence Practitioner |
+               </strong></p>
                </div>
             </aside>
             <div id="colorlib-main">
@@ -61,7 +65,7 @@
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
 							<span class="heading-meta">FINISHED Works</span>
-							<h2 class="colorlib-heading animate-box">Projects</h2>
+							<h2 class="colorlib-heading animate-box">Strategic Projects: </h2>
 						</div>
 					</div>
                                     <div class="panel panel-default">
@@ -73,7 +77,8 @@
 									    <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
 									        <div class="panel-body">
 									             <p align="center"><h5><strong> Mahindra and Mahindra Financial Services Limited,  Oct. 2018 – Nov. 2019</strong></h5></p>
-
+                                        <p align="justify"><h5>Project Title:</h5> Build end to end world class Loan disbursement process which provides superior customer experience.</p>
+                                        <p align="justify"><h5>Key actions:</p>
                                                             <li>  Evaluate different software/system </li>
                                                             <li>  Formation of team (Different level and geography </li>
                                                             <li>  Identification of SPOC and project team </li>
@@ -104,7 +109,8 @@
 									    <div id="collapse2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading2">
 									        <div class="panel-body">
 									             <p align="center"><h5><strong> Mahindra and Mahindra Financial Services Limited,  Apr. 2016 – Mar. 2018</strong></h5></p>
-
+                                        <p align="justify"><h5>Project Title:</h5> Design, develop and deploy continuous Improvement culture across all Manhindra branches.</p>
+                                        <p align="justify"><h5>Key actions:</p><h5>
                                                             <li>  Defined roles,responsibilities and routine activities at each level .</li>
                                                             <li>  Defined Process measures and result measures </li>
                                                             <li>  Standardized SOP's</li>
