--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                                     <h2>About Me</h2>
                                     <hr>
                                     <p align="justify">
-                                        A dynamic leader, strategic thinker and transformation catalyst with over 19 years of diversified experience in delivering sustainable business performance improvement, conceptualising and implementing Center of Excellence (CoE) strategies, building successful Machine Learning algorithms and transforming customer experience in Service & Manufacturing industries.</li>
-                                        A certified Lean Six Sigma Master Black Belt professional, proficient in designing & deploying Lean Six Sigma transformation programme, trained & developed more than 700 Lean Six Sigma professionals and mentored hundreds of Green Belts & Black belts on breakthrough improvement projects with desired outcomes.</li>
+                                        A dynamic leader, strategic thinker and transformation catalyst with over 18 years of diversified experience in delivering sustainable business performance improvement, conceptualising and implementing Center of Excellence (CoE) strategies, building successful Machine Learning algorithms and transforming customer experience in Service & Manufacturing industries.</li>
+                                        A certified Lean Six Sigma Master Black Belt professional, proficient in designing & deploying Lean Six Sigma transformation programme, trained & developed more than 750 Lean Six Sigma professionals and mentored hundreds of Green Belts & Black belts on breakthrough improvement projects with desired outcomes.</li>
                                         A certified Machine learning and Artificial Intelligence practitioner with an ability to build, test and deploy ML and AI models to solve real-world business problems.</li>
                                         Expert in transforming strategic plans into tactical initiatives, Led several functional initiatives, collaborative work with local and global teams in achieving company’s short term and long term goals.</li>
                                     </p>
@@ -440,7 +440,10 @@
                                        <h2><a href="#">Mahindra and Mahindra Financial Services Limited, Mumbai</a> <span>February 2016 - Present</span></h2>
                                        <p align="justify">
                                          <!--  <strong><a href="https://www.youtube.com/channel/UCNOHaiZpf-HhyazeYqTeXvA/featured?view_as=subscriber"> -->
-                                           <strong>Senior Manager Business Excellence</strong><br> Working in an India’s leading financial company as  a Lean Six Sigma Master Black Belt and Business transformation leader mainly responsible for building continuous improvement culture, leading strategic initiatives, improving business processes, driving improvement projects, mentoring project owners, performing exploratory data analysis, developing predictive models and designing interactive business intelligence dashboards.</p>
+                                          <li><strong>Head Business Excellence,<span> (April 2021 - Present)</span></strong><br></li>
+                                           <li><strong>Senior Manager Business Excellence,<span> (February 2016 - March 2021)</span></strong><br></li></p>
+                                       <p align="justify">
+                                             Working in an India’s leading financial company as  a Lean Six Sigma Master Black Belt and Business transformation leader mainly responsible for building continuous improvement culture, leading strategic initiatives, improving business processes, driving improvement projects, mentoring project owners, performing exploratory data analysis, developing predictive models and designing interactive business intelligence dashboards.</p>
                                        <p></p>
                                     </div>
                                  </div>
