--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                                        <h2><a href="#">Mahindra and Mahindra Financial Services Limited, Mumbai</a> <span>February 2016 - Present</span></h2>
                                        <p align="justify">
                                          <!--  <strong><a href="https://www.youtube.com/channel/UCNOHaiZpf-HhyazeYqTeXvA/featured?view_as=subscriber"> -->
-                                          <li><strong>Head Business Excellence,<span> (April 2021 - Present)</span></strong><br></li>
+                                          <li><strong>Deputy General Manager Business Excellence,<span> (April 2021 - Present)</span></strong><br></li>
                                            <li><strong>Senior Manager Business Excellence,<span> (February 2016 - March 2021)</span></strong><br></li></p>
                                        <p align="justify">
                                              Working in an India’s leading financial company as  a Lean Six Sigma Master Black Belt and Business transformation leader mainly responsible for building continuous improvement culture, leading strategic initiatives, improving business processes, driving improvement projects, mentoring project owners, performing exploratory data analysis, developing predictive models and designing interactive business intelligence dashboards.</p>
